refactor(net): drain rejected bodies and drop the deprecated URL entry
A non-2xx returned null without touching the error stream, which keeps
that connection out of the keep-alive pool -- so a run of rejections, a
rate limit or a service having a bad minute, opened a fresh socket every
time. Also swaps the URL(String) constructor, deprecated since JDK 20,
for URI.create(...).toURL(), which is the last deprecation warning in
the build.